# Aether

./: MCU.kicad_sch  Power.kicad_sch  Project Aether.kicad_pro  Project Aether.kicad_sch  README.md  aetherstm32.ioc2
Local Libraries/Footprints/BM83SM1_00TB.pretty/: BM83_MCH.kicad_mod
Local Libraries/Footprints/ECS_160_10_36_CKM_TR3/: ECS-160-10-36-CKM-TR3.step  XTAL_ECS-160-10-36-CKM-TR3.kicad_mod
Local Libraries/Footprints/GSB1C4621DS1HR/: AMPHENOL_GSB1C4621DS1HR.kicad_mod  GSB1C4621DS1HR.step
Local Libraries/Footprints/MCP111T_300E_TT/: SOT-23_MC_MCH.step
Local Libraries/Footprints/MCP111T_300E_TT/KiCADv6/footprints.pretty/: SOT-23_MC_MCH-M.kicad_mod  SOT-23_MC_MCH.kicad_mod
Local Libraries/Footprints/MCP1825S_3302E_DB/: SOT-223_3MC_MCH.kicad_mod
Local Libraries/Footprints/TLV62569DBVR/: SOT95P280X145-5N.kicad_mod
Local Libraries/Footprints/USBLC6-2SC6Y/footprints.pretty/: SOT23-6L_STM-L.kicad_mod  SOT23-6L_STM.kicad_mod
Local Libraries/Footprints/ul_STM32C552CET6/: LQFP-48_STM-L.kicad_mod  LQFP-48_STM-M.kicad_mod
Local Libraries/Symbols/: 2026-06-04_01-45-10.kicad_sym  2026-06-05_08-07-11.kicad_sym
PCB/: MCU.kicad_sch  Power.kicad_sch  Project Aether.kicad_pcb  Project Aether.kicad_pro  Project Aether.kicad_sch  fp-lib-table  userinterface.kicad_sch
PCB/Local Libraries/Footprints/: AMPHENOL_GSB1C41110SSHR.kicad_mod  LQFP-48_STM.step  SMD4_UHD111A-FKA_CRW.kicad_mod  SOT-223_3MC_MCH-M.kicad_mod  SOT23-6L_STM-M.kicad_mod  SW_SKRPACE010.kicad_mod  skrpace010 color.step  skrpace010.3mf  skrpace010.stp
PCB/Local Libraries/Footprints/MCP111T_300E_TT/KiCADv6/footprints.pretty/: SOT-23_MC_MCH-L.kicad_mod
PCB/Local Libraries/Footprints/MCP1825S_3302E_DB/: SOT-223_3MC_MCH-L.kicad_mod  SOT-223_3MC_MCH.step
PCB/Local Libraries/Footprints/ul_STM32C552CET6/: LQFP-48_STM.kicad_mod
PCB/Local Libraries/Symbols/: 2026-06-04_00-02-39.kicad_sym  2026-06-05_05-42-46.kicad_sym  ECS-160-10-36-CKM-TR3.kicad_sym  GSB1C4621DS1HR.kicad_sym  MCP1825s-3302E.kicad_sym  TLV62569DBVR.kicad_sym
aetherstm32_cmake/: CMakeLists.txt  CMakePresets.json  main.c
aetherstm32_cmake/arch/cmsis/: CMakeLists.txt  LICENSE.md  SW_Security_Level.md
aetherstm32_cmake/cmake/: GCC.14.3.1.cmake  components.cmake  files.cmake  flags.cmake  target.cmake
aetherstm32_cmake/stm32c5xx_dfp/: CMakeLists.txt  LICENSE.md  README.md  RTE_Components.h  Release_Notes.md  SW_Security_Level.md
aetherstm32_cmake/stm32c5xx_dfp/IDEs_patches/EWARM/: README.md
aetherstm32_cmake/stm32c5xx_dfp/Source/: startup_stm32c531xx.c  startup_stm32c532xx.c  startup_stm32c542xx.c  startup_stm32c551xx.c  startup_stm32c552xx.c  startup_stm32c562xx.c  startup_stm32c591xx.c  startup_stm32c593xx.c  startup_stm32c5a3xx.c
aetherstm32_cmake/stm32c5xx_dfp/Source/Templates/arm/linker/: stm32c53xxb_flash.sct  stm32c53xxc_flash.sct  stm32c53xxx_sram.sct  stm32c542xc_flash.sct  stm32c542xc_sram.sct  stm32c55xxc_flash.sct  stm32c55xxe_flash.sct  stm32c55xxx_sram.sct  stm32c562xe_flash.sct  stm32c562xe_sram.sct  stm32c59xxe_flash.sct  stm32c59xxg_flash.sct  stm32c59xxx_sram.sct  stm32c5a3xg_flash.sct  stm32c5a3xg_sram.sct
aetherstm32_cmake/stm32c5xx_dfp/Source/Templates/gcc/linker/: stm32c53xxb_flash.ld  stm32c53xxc_flash.ld  stm32c53xxx_sram.ld  stm32c542xc_flash.ld  stm32c542xc_sram.ld  stm32c55xxc_flash.ld  stm32c55xxx_sram.ld  stm32c562xe_flash.ld  stm32c562xe_sram.ld  stm32c59xxe_flash.ld  stm32c59xxg_flash.ld  stm32c59xxx_sram.ld  stm32c5a3xg_flash.ld  stm32c5a3xg_sram.ld
aetherstm32_cmake/stm32c5xx_dfp/Source/Templates/iar/linker/: stm32c53xxb_flash.icf  stm32c53xxc_flash.icf  stm32c53xxx_sram.icf  stm32c542xc_flash.icf  stm32c542xc_sram.icf  stm32c55xxc_flash.icf  stm32c55xxe_flash.icf  stm32c55xxx_sram.icf  stm32c562xe_flash.icf  stm32c562xe_sram.icf  stm32c59xxe_flash.icf  stm32c59xxg_flash.icf  stm32c59xxx_sram.icf  stm32c5a3xg_flash.icf  stm32c5a3xg_sram.icf
aetherstm32_cmake/stm32c5xx_drivers/: CMakeLists.txt  LICENSE.md  README.md  Release_Notes.md  SW_Security_Level.md
aetherstm32_cmake/stm32c5xx_drivers/doc/: STMicroelectronics.stm32c5xx_hal_drivers_dependencies.md
aetherstm32_cmake/stm32c5xx_drivers/os_port/freertos/: stm32_hal_os.c  stm32_hal_os.h
aetherstm32_cmake/stm32c5xx_drivers/os_port/no_os/: stm32_hal_os.c  stm32_hal_os.h
aetherstm32_cmake/stm32c5xx_drivers/templates/common/: stm32_ll.h
aetherstm32_cmake/stm32c5xx_drivers/templates/os_port/: stm32_hal_os.c  stm32_hal_os.h
aetherstm32_cmake/stm32c5xx_drivers/templates/timebases/: mx_rtc.c  mx_rtc.h  mx_timx.c  mx_timx.h  stm32_hal_timebase.h
aetherstm32_cmake/stm32c5xx_drivers/timebases/: stm32_hal_timebase_rtc_alarm.c  stm32_hal_timebase_rtc_wakeup.c  stm32_hal_timebase_tim.c
aetherstm32_cmake/stm32c5xx_drivers/utils/fdcan_timing/: stm32_utils_fdcan.c  stm32_utils_fdcan.h
aetherstm32_cmake/stm32c5xx_drivers/utils/i2c_timing/: stm32_utils_i2c.c  stm32_utils_i2c.h
aetherstm32_cmake/stm32c5xx_drivers/utils/i3c_timing/: stm32_utils_i3c.c  stm32_utils_i3c.h
aetherstm32_cmake/user_modifiable/Device/STM32C552CET6/: stm32c55xxe_flash.ld
aetherstm32_cmake/user_modifiable/_debug_GCC_STM32C552CET6/: RTE_Components.h
aetherstm32_cmake/utilities/syscalls/: CMakeLists.txt  LICENSE.md  README.md  Release_Notes.md  SW_Security_Level.md  syscalls.c  sysmem.c
